fix green status dot on mobile and profile banner (#6321)

--- a/static/less/media.less
+++ b/static/less/media.less
@@ -189,8 +189,8 @@ img {
 
     &.img-size-large .user-online-status {
         width: 20px;
-        right: -7px;
-        bottom: -7px;
+        right: -5px;
+        bottom: -5px;
         border-width: 2px;
     }
 }
